@startuml
'https://plantuml.com/class-diagram

class App {
    main()
}
class ReadFile {
    -ArrayList<String> list
    - String fileName
    - Scanner in
    +readFile()
    +readFromFile()
    +getList
}
class WriteFile {
    - FileWriter writer
    -ArrayList<String> list
    +WriteFile()


}

App o----> ReadFile
App o---> WriteFile

@enduml